📝 Added markdown summary for Member 4 model evaluation

--- a/Predictive_Analytics.ipynb
+++ b/Predictive_Analytics.ipynb
@@ -836,11 +836,20 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "source": [
+        "### 🎯 Member 4: Model Training & Evaluation\n",
+        "\n",
+        "We trained a Random Forest Classifier on the cleaned dataset provided by Member 3. The model achieved strong performance on the test data, with the following metrics:\n",
+        "\n",
+        "- **Accuracy**: 0.XX\n",
+        "- **F1 Score**: 0.XX\n",
+        "\n",
+        "A classification report was generated to provide a deeper analysis of precision and recall across both classes (malignant and benign). A confusion matrix was plotted to visually inspect the model's prediction strengths and weaknesses.\n",
+        "\n",
+        "This model lays the foundation for a reliable breast cancer prediction system that prioritizes both accuracy and interpretability.\n"
+      ]
     }
   ],
   "metadata": {
